Fixed intro background and aligned h2 text

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,24 +3,30 @@
   color: gray;
 }
 
-#intro {
-    background-image: url('https://wallpapers.com/images/hd/binary-code-code-numbers-green-glow-agx3h70ga36galq2.jpg')
+.overlay  {
+    /* background-image: url('https://wallpapers.com/images/hd/binary-code-code-numbers-green-glow-agx3h70ga36galq2.jpg');
+    opacity : 0.5; */
 }
 
 #intro {
+    /* background-image: url('https://wallpapers.com/images/hd/binary-code-code-numbers-green-glow-agx3h70ga36galq2.jpg'); */
+    background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("https://wallpapers.com/images/hd/binary-code-code-numbers-green-glow-agx3h70ga36galq2.jpg");
+    /* background-opacity: 0.5; */
+    background-color: rgba(0,0,0,0.05);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: -1;
 }
+
 h1 {
     font-family: 'PT Sans', sans-serif; 
 }
 
 .IntroText {
     margin: 10% auto;
-    color: cornsilk;
+    color: rgb(55, 54, 54)
 }
 
 .IntroText h1 {
@@ -33,8 +39,10 @@ h1 {
 
 h2 {
     position: absolute;
+    text-align: center;
     left: 50%;
     font-family: 'Montserrat', sans-serif;
+    padding-top: 200px;
 }
 
 .carousel-inner img {
